--- a/sgd78%.ipynb
+++ b/sgd78%.ipynb
@@ -3,7 +3,95 @@
   {
    "cell_type": "markdown",
    "metadata": {},
-   "source": []
+   "source": [
+    "<div class=\"markdown\" style=\"background-color: white; color:black;\" >\n",
+    "    <div class=\"markdown\" style=\"background-color: white; color:black; text-align: center;\">\n",
+    "        <h1 style=\"font-size: 48px; font-weight: bold;\">Stochiastic Gradient Descent As A Method For MutiLabel Classification\n",
+    "    </h1>\n",
+    "    </div>\n",
+    "</div>\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "<style>\n",
+    "    .markdown-cell {\n",
+    "        background-color: black;\n",
+    "        color: white;\n",
+    "        padding: 20px;\n",
+    "        font-family: Arial, sans-serif;\n",
+    "        font-size: 24px; /* Increase the font size here */\n",
+    "        line-height: 1.5;\n",
+    "    }\n",
+    "    \n",
+    "    .markdown-cell h1 {\n",
+    "        font-size: 24px;\n",
+    "        font-weight: bold;\n",
+    "        margin-bottom: 20px;\n",
+    "    }\n",
+    "    \n",
+    "    .markdown-cell h2 {\n",
+    "        font-size: 20px;\n",
+    "        font-weight: bold;\n",
+    "        margin-bottom: 15px;\n",
+    "    }\n",
+    "    \n",
+    "    .markdown-cell p {\n",
+    "        margin-bottom: 10px;\n",
+    "    }\n",
+    "</style>\n",
+    "\n",
+    "<div class=\"markdown-cell\">\n",
+    "    <h2 style=\"font-size: 28px;\">Abstract</h2>\n",
+    "</div>\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "We employed <span style=\"color:blue\"><b>SGD Classifier</b></span> to predict what annotations can be assigned to a particular post. Achieving this was very intuitive and fairly simple, as one would notice if they went through this notebook's contents thoroughly.\n",
+    "\n",
+    "We used the <a href=\"https://drive.google.com/file/d/1EaJRkoVUiBQVaWlOC3ooYjdIR1catdYd/view\" style=\"color:red\">Primate Dataset</a>, which was offered to use in the Problem Statement document.\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "<style>\n",
+    "    .markdown-cell {\n",
+    "        background-color: black;\n",
+    "        color: white;\n",
+    "        padding: 20px;\n",
+    "        font-family: Arial, sans-serif;\n",
+    "        font-size: 16px;\n",
+    "        line-height: 1.5;\n",
+    "    }\n",
+    "    \n",
+    "    .markdown-cell h1 {\n",
+    "        font-size: 24px;\n",
+    "        font-weight: bold;\n",
+    "        margin-bottom: 20px;\n",
+    "    }\n",
+    "    \n",
+    "    .markdown-cell h2 {\n",
+    "        font-size: 20px;\n",
+    "        font-weight: bold;\n",
+    "        margin-bottom: 15px;\n",
+    "    }\n",
+    "    \n",
+    "    .markdown-cell p {\n",
+    "        margin-bottom: 10px;\n",
+    "    }\n",
+    "</style>\n",
+    "\n",
+    "<div class=\"markdown-cell\">\n",
+    "    <h1 style=\"font-size: 24px;\">Import Data, Libraries</h1>\n",
+    "</div>\n"
+   ]
   },
   {
    "cell_type": "code",
@@ -192,35 +280,70 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "The following function performs these steps:\n",
+    "1. <span style= \"color:skyblue\">Regular Expression-Based Cleaning</span>:\n",
+    "    \n",
+    "    - Removes <span style= \"color:red\">stock market tickers ($GE)</span>.\n",
+    "    - Removes <span style= \"color:red\">old-style retweet text (\"RT\")</span>.\n",
+    "    - Removes <span style= \"color:red\">hyperlinks</span>.\n",
+    "    - Removes <span style= \"color:red\">hashtags</span> by replacing the <span style= \"color:red\">\"#\"</span> symbol.\n",
+    "2. <span style= \"color:skyblue\">Tokenization</span>:\n",
+    "    - Converts the text into a list of individual words using <span style= \"color:red\">TweetTokenizer</span>.\n",
+    "3. <span style= \"color:skyblue\">Stopword Removal and Punctuation Removal</span>:\n",
+    "    - Filters out <span style= \"color:red\">common stop words (e.g., \"the\", \"a\")</span> in English using `stopwords_english`.\n",
+    "    - Removes any remaining <span style= \"color:red\">punctuation characters (e.g., \".\", \",\", \";\")</span>.\n",
+    "4. <span style= \"color:skyblue\">Stemming (Optional)</span>:\n",
+    "    - The commented-out line (`processed_text.append(word)`) would simply <span style= \"color:red\">add words without stemming</span>.\n",
+    "    - The active line performs stemming (`stemmer.stem(word)`) to <span style= \"color:red\">reduce words to their base form (e.g., \"jumping\" becomes \"jump\")</span>.\n",
+    "5. <span style= \"color:skyblue\">Return Processed Text</span>:\n",
+    "    - Returns the resulting list of processed words."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 26,
    "metadata": {},
    "outputs": [],
    "source": [
+    "from nltk.stem import PorterStemmer\n",
+    "from nltk.tokenize import TweetTokenizer\n",
+    "def process_text(text):\n",
+    "    \"\"\"Process text function.\n",
+    "    Input:\n",
+    "        text: a string containing the text\n",
+    "    Output:\n",
+    "        processed_text: a list of words containing the processed text\n",
     "\n",
+    "    \"\"\"\n",
+    "    stemmer = PorterStemmer()\n",
+    "    stopwords_english = stopwords.words('english')\n",
     "\n",
-    "# Define a function to preprocess the text\n",
-    "def preprocess_text(text):\n",
-    "    # Convert text to lowercase\n",
-    "    text = text.lower()\n",
-    "    \n",
-    "    # Remove special characters and numbers\n",
-    "    text = re.sub(r'[^a-zA-Z]', ' ', text)\n",
-    "    \n",
-    "    # Tokenize the text\n",
-    "    tokens = word_tokenize(text)\n",
-    "    \n",
-    "    # Remove stopwords\n",
-    "    stop_words = set(stopwords.words('english'))\n",
-    "    tokens = [token for token in tokens if token not in stop_words]\n",
-    "    \n",
-    "    # Join the tokens back into a string\n",
-    "    processed_text = ' '.join(tokens)\n",
-    "    \n",
-    "    return processed_text\n",
+    "    # remove stock market tickers like $GE\n",
+    "    text = re.sub(r'\\$\\w*', '', text)\n",
+    "    # remove old style retweet text \"RT\"\n",
+    "    text = re.sub(r'^RT[\\s]+', '', text)\n",
+    "    # remove hyperlinks    \n",
+    "    text = re.sub(r'https?://[^\\s\\n\\r]+', '', text)\n",
+    "    # remove hashtags\n",
+    "    # only removing the hash # sign from the word\n",
+    "    text = re.sub(r'#', '', text)\n",
+    "    # tokenize text\n",
+    "    tokenizer = TweetTokenizer(preserve_case=False, strip_handles=True,\n",
+    "                               reduce_len=True)\n",
+    "    text_tokens = tokenizer.tokenize(text)\n",
     "\n",
-    "# Apply the preprocessing function to the post_text column\n",
-    "df['processed_text'] = df['post_text'].apply(preprocess_text)\n"
+    "    processed_text = []\n",
+    "    for word in text_tokens:\n",
+    "        if (word not in stopwords_english and  # remove stopwords\n",
+    "                word not in string.punctuation):  # remove punctuation\n",
+    "            # processed_text.append(word)\n",
+    "            stem_word = stemmer.stem(word)  # stemming word\n",
+    "            processed_text.append(stem_word)\n",
+    "\n",
+    "    return processed_text"
    ]
   },
   {
@@ -251,12 +374,26 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "The following cell extracts the unique annotations from the posts, then forms a column in the dataset for the same"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 28,
    "metadata": {},
    "outputs": [],
    "source": [
     "df['tags'] = df['annotations'].apply(lambda x: [annotation[0] for annotation in x if annotation[1] == 'yes'])\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "We then proceed the apply a MultiLabelBinarizer, to convert yes to 1 and no to 0."
    ]
   },
   {
@@ -481,6 +618,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Instead of having the same names, we label the tags from 1 to 9. This serves as a gread visual aid."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 32,
    "metadata": {},
@@ -688,6 +832,14 @@
    ],
    "source": [
     "df.head()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "For any string related task, we always employ the `TfidfVectorizer` to vectorize and return a csr matrix of the strings. This converts the string to float which allows for computation.\n",
+    "  "
    ]
   },
   {
@@ -1743,6 +1895,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Upon further exploration, we noticed a severe class imbalance. "
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 38,
    "metadata": {},
@@ -1808,6 +1967,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "To deal with the class imbalance, we assigned weights to negate bias for the oversampled classes."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 42,
    "metadata": {},
@@ -1851,6 +2017,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "We imported multiple classification models to test for varied accuracies."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 48,
    "metadata": {},
@@ -1867,6 +2040,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Jaccard score serves as a great evaluation metric for multilabel classification."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 49,
    "metadata": {},
@@ -1879,6 +2059,13 @@
     "    print(\"Clf: \", clf.__class__.__name__)\n",
     "    print(\"Jacard score: {}\".format(j_score(y_test, y_pred)))\n",
     "    print(\"----\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "The accuracy here is very low because this accuracy accounts for only when the predicted array of tags matches exactly with the actual array. The accuracy for actual classes is actually decent(as seen in later cells)."
    ]
   },
   {
