--- a/efsioh.ipynb
+++ b/efsioh.ipynb
@@ -2894,10 +2894,162 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "model = keras.models.load_model('model.h5')\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 35,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "ip = {'i want to die', 'this world is so fucking shit', 'i wish i was dead'}\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 36,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from nltk.corpus import stopwords\n",
+    "from nltk.tokenize import word_tokenize\n",
+    "import re\n",
+    "\n",
+    "# Define a function to preprocess the text\n",
+    "def preprocess_text(text):\n",
+    "    # Convert text to lowercase\n",
+    "    text = text.lower()\n",
+    "    \n",
+    "    # Remove special characters and numbers\n",
+    "    text = re.sub(r'[^a-zA-Z]', ' ', text)\n",
+    "    \n",
+    "    # Tokenize the text\n",
+    "    tokens = word_tokenize(text)\n",
+    "    \n",
+    "    # Remove stopwords\n",
+    "    stop_words = set(stopwords.words('english'))\n",
+    "    tokens = [token for token in tokens if token not in stop_words]\n",
+    "    \n",
+    "    # Join the tokens back into a string\n",
+    "    processed_text = ' '.join(tokens)\n",
+    "    \n",
+    "    return processed_text\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 37,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "labeldict ={'Feeling-bad-about-yourself-or-that-you-are-a-failure-or-have-let-yourself-or-your-family-down': 0,\n",
+    "            'Feeling-down-depressed-or-hopeless': 1, \n",
+    "            'Feeling-tired-or-having-little-energy': 2, \n",
+    "            'Little-interest-or-pleasure-in-doing ': 3,\n",
+    "            'Moving-or-speaking-so-slowly-that-other-people-could-have-noticed-Or-the-opposite-being-so-fidgety-or-restless-that-you-have-been-moving-around-a-lot-more-than-usual':4, \n",
+    "            'Poor-appetite-or-overeating': 5, \n",
+    "            'Thoughts-that-you-would-be-better-off-dead-or-of-hurting-yourself-in-some-way': 6, \n",
+    "            'Trouble-concentrating-on-things-such-as-reading-the-newspaper-or-watching-television': 7, \n",
+    "            'Trouble-falling-or-staying-asleep-or-sleeping-too-much': 8}"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 38,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "No sentence-transformers model found with name google-bert/bert-base-uncased. Creating a new one with MEAN pooling.\n"
+     ]
+    }
+   ],
+   "source": [
+    "embedder = SentenceTransformer('google-bert/bert-base-uncased')\n",
+    "embedder.max_seq_length = 512\n",
+    "results = {}\n",
+    "for input_string in ip:\n",
+    "    # Preprocess the input string\n",
+    "    processed_input = preprocess_text(input_string)\n",
+    "\n",
+    "    # Encode the processed input using the SentenceTransformer model\n",
+    "    embedded_input = embedder.encode([processed_input], show_progress_bar=False)\n",
+    "\n",
+    "    # Make predictions for the input\n",
+    "    input_predictions = model.predict(embedded_input)\n",
+    "    input_predictions = pd.DataFrame(input_predictions)\n",
+    "    input_predictions = input_predictions.apply(lambda x: [1 if val >= 0.349802 else 0 for val in x])\n",
+    "\n",
+    "    # Get the labels for input predictions\n",
+    "    input_predicted_labels = [(label, \"yes\" if input_predictions[value][0] == 1 else \"no\") for label, value in labeldict.items()]\n",
+    "\n",
+    "    # Store the result in the dictionary\n",
+    "    results[input_string] = input_predicted_labels\n",
+    "\n",
+    "# Ensure that all variables and functions are used correctly\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 40,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1/1 [==============================] - 0s 28ms/step\n",
+      "1/1 [==============================] - 0s 31ms/step\n",
+      "1/1 [==============================] - 0s 31ms/step\n"
+     ]
+    }
+   ],
+   "source": [
+    "results = {}\n",
+    "for input_string in ip:\n",
+    "    # Preprocess the input string\n",
+    "    processed_input = preprocess_text(input_string)\n",
+    "\n",
+    "    # Encode the processed input using the SentenceTransformer model\n",
+    "    embedded_input = embedder.encode([processed_input], show_progress_bar=False)\n",
+    "\n",
+    "    # Make predictions for the input\n",
+    "    input_predictions = model.predict(embedded_input)\n",
+    "    input_predictions = pd.DataFrame(input_predictions)\n",
+    "    input_predictions = input_predictions.apply(lambda x: [1 if val >= 0.349802 else 0 for val in x])\n",
+    "\n",
+    "    # Get the labels for input predictions\n",
+    "    input_predicted_labels = [(label, \"yes\" if input_predictions[value][0] == 1 else \"no\") for label, value in labeldict.items()]\n",
+    "\n",
+    "    # Store the result in the dictionary\n",
+    "    results[input_string] = input_predicted_labels\n",
+    "\n",
+    "# Ensure that all variables and functions are used correctly\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 42,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'this world is so fucking shit': [('Feeling-bad-about-yourself-or-that-you-are-a-failure-or-have-let-yourself-or-your-family-down', 'yes'), ('Feeling-down-depressed-or-hopeless', 'yes'), ('Feeling-tired-or-having-little-energy', 'no'), ('Little-interest-or-pleasure-in-doing ', 'no'), ('Moving-or-speaking-so-slowly-that-other-people-could-have-noticed-Or-the-opposite-being-so-fidgety-or-restless-that-you-have-been-moving-around-a-lot-more-than-usual', 'no'), ('Poor-appetite-or-overeating', 'no'), ('Thoughts-that-you-would-be-better-off-dead-or-of-hurting-yourself-in-some-way', 'no'), ('Trouble-concentrating-on-things-such-as-reading-the-newspaper-or-watching-television', 'no'), ('Trouble-falling-or-staying-asleep-or-sleeping-too-much', 'no')], 'i want to die': [('Feeling-bad-about-yourself-or-that-you-are-a-failure-or-have-let-yourself-or-your-family-down', 'yes'), ('Feeling-down-depressed-or-hopeless', 'no'), ('Feeling-tired-or-having-little-energy', 'yes'), ('Little-interest-or-pleasure-in-doing ', 'no'), ('Moving-or-speaking-so-slowly-that-other-people-could-have-noticed-Or-the-opposite-being-so-fidgety-or-restless-that-you-have-been-moving-around-a-lot-more-than-usual', 'no'), ('Poor-appetite-or-overeating', 'yes'), ('Thoughts-that-you-would-be-better-off-dead-or-of-hurting-yourself-in-some-way', 'yes'), ('Trouble-concentrating-on-things-such-as-reading-the-newspaper-or-watching-television', 'no'), ('Trouble-falling-or-staying-asleep-or-sleeping-too-much', 'no')], 'i wish i was dead': [('Feeling-bad-about-yourself-or-that-you-are-a-failure-or-have-let-yourself-or-your-family-down', 'yes'), ('Feeling-down-depressed-or-hopeless', 'yes'), ('Feeling-tired-or-having-little-energy', 'yes'), ('Little-interest-or-pleasure-in-doing ', 'no'), ('Moving-or-speaking-so-slowly-that-other-people-could-have-noticed-Or-the-opposite-being-so-fidgety-or-restless-that-you-have-been-moving-around-a-lot-more-than-usual', 'no'), ('Poor-appetite-or-overeating', 'no'), ('Thoughts-that-you-would-be-better-off-dead-or-of-hurting-yourself-in-some-way', 'yes'), ('Trouble-concentrating-on-things-such-as-reading-the-newspaper-or-watching-television', 'no'), ('Trouble-falling-or-staying-asleep-or-sleeping-too-much', 'yes')]}\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(results)"
+   ]
   },
   {
    "cell_type": "code",
